--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <div id="yellow" class="btn yellow"></div>
         </div>
         <div class="circle"></div>
-        <div class="circle-logo"></div>
+        <div class="circle-logo">
+            <div class="center">SIMON</div>
+        </div>
         <div class="row">
             <div id="red" class="btn"></div>
             <div id="green" class="btn"></div> 
